--- a/client/index.html
+++ b/client/index.html
@@ -62,19 +62,17 @@
 	}
 	
 	.bubble {
-		fill: lightblue;
 		cursor: pointer;
-	}
-	
-	.node > text {
-		stroke: green;
-		fill: green;
 	}
 	
 	.bubble:hover,
 	.bubble.selected {
 		stroke: #000;
 		stroke-width: 1.2px;
+	}
+	
+	.node text {
+		pointer-events: none;
 	}
 
 	g{
@@ -297,7 +295,7 @@ fill="#000000" stroke="none">
 				<h2>Related Topics</h2>
 				<div id='topic-list' class='list'></div>
 				<div class='row'>
-					<div class='col-lg-offset-3 col-lg-6, col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8 col-xs-offset-2 col-xs-8'>
+					<div class='col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8 col-xs-offset-2 col-xs-8'>
 						<button data-from-id='#topic' data-to-id='#question' style='display: none;' id='send-topics-btn' class='btn btn-primary btn-lg btn-block'>Get Related Questions</button>
 					</div>
 				</div>
@@ -412,78 +410,95 @@ function generateTopicServer(){
 
 function createBubbleVisual(relevance){
 	var relArr = [],
-		$bubbles = $('#bubbles').empty();
+		$bubbles = $('#bubbles').empty(),
+		minRel = Number.MAX_SAFE_INTEGER,
+		maxRel = Number.MIN_SAFE_INTEGER;
 	
 	$bubbles.height($('#question-list').height());
 
 	Object.keys(relevance).forEach(function(key){
-		var value = relevance[key],
-			name =
+		var value = relevance[key];
+		
+		if(value < minRel){
+			minRel = value;
+		}
+
+		if(value > maxRel && value != 1){
+			maxRel = value;
+		}
 
 		relArr.push({
 			name: key.split('-').slice(0, -1).join(' '),
 			size: value
 		});
 	});
-
-	var bleed = 100,
-		width = $bubbles.width(),
-		height = $bubbles.height();
+	
+	var width = $bubbles.width(),
+		height = $bubbles.height(),
+		colorScale = d3.scale.linear().domain([minRel,maxRel]).range(["#CDF3FF","#C0E6FF"]);
 
 	var pack = d3.layout.pack()
 		.sort(null)
-		.size([width, height + bleed * 2])
+		.size([width, height])
 		.padding(2);
 
 	var svg = d3.select("#bubbles").append("svg")
 		.attr("width", width)
 		.attr("height", height)
-		.append("g")
-		.attr("transform", "translate(0," + -bleed + ")");
+		.append("g");
 
-	var json = {name: 'flare', size: 0, children: relArr};
+	var json = {name: 'flare', size: 0, children: relArr},
+		data = pack.nodes(flatten(json)).filter(function(d){
+			return !d.children;
+		});
 
 	var node = svg.selectAll(".node")
-		.data(pack.nodes(flatten(json))
-		.filter(function(d) { return !d.children; }))
+		.data(data)
 		.enter().append("g")
-		.attr("class", "node")
-		.attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; })
-		.attr('title', function(d) { return d.name; });
+			.attr("class", "node")
+			.attr("transform", function(d) { 
+				return "translate(" + d.x + "," + d.y + ")"; 
+			})
+			.attr('title', function(d) { 
+				return d.name; 
+			});
 
-	node
-		.append("circle")
+	node.append("circle")
 		.attr('class', 'bubble')
-		.attr("r", function(d) { return d.r; })
-		.on("mouseover", function(d){
-			var $this = $(this);
-			
+		.attr('fill', function(d){
+			return d.value === 1 ? "#b3d9ff" : colorScale(d.value);
 		})
-		.on("mouseout", function(d){
-			var $this = $(this);
+		.attr("r", function(d) { 
+			return d.r; 
 		})
 		.on('click', function(d){
 			$(this).toggleClass('selected');
 		});
 
-	node
-		.append("text")
-		.text(function(d) { return d.name; })
-		.style("font-size", function(d) { return Math.min(2 * d.r, (2 * d.r - 8) / this.getComputedTextLength() * 24) + "px"; })
-		.attr("dy", ".35em");
+	node.append("text")
+		.text(function(d) { 
+			return d.name; 
+		})
+		.attr('font-size', '1.25em')
+		.attr('dy', function(d){
+			return $(this).height() / 2;
+		})
+		.attr("dx", function(d){
+			return -this.getComputedTextLength() / 2;
+		});
 
 	// Returns a flattened hierarchy containing all leaf nodes under the root.
 	function flatten(root) {
-	var nodes = [];
+		var nodes = [];
 
-	function recurse(node) {
-		if (node.children) {
-			node.children.forEach(recurse);
+		function recurse(node) {
+			if (node.children) {
+				node.children.forEach(recurse);
+			}
+			else {
+				nodes.push({name: node.name, value: node.size});
+			}
 		}
-		else {
-			nodes.push({name: node.name, value: node.size});
-		}
-	}
 
 		recurse(root);
 
@@ -506,10 +521,13 @@ function addToList(question){
 
 	$link
 		.html(title)
-		.attr('href', url);
+		.attr({
+			target: '_blank',
+			href: url
+		});
 
 	$header
-		.css('pointer-events', 'none')
+		.css('pointer-events', 'all')
 		.append($link);
 
 	$question
